<resources>
    <string name="app_name">MyProfile</string>
    <string name="back_arrow">Atras</string>
    <string name="burger_menu">Menu</string>
    <string name="My_Profile">My Profile</string>
    <string name="FullName">Full Name</string>
    <string name="Rol">Team Dev</string>
    <string name="Avatar">Avatar</string>
    <string name="Folder">Folders</string>
    <string name="Folder_number">67</string>
    <string name="Itame">Itame</string>
    <string name="Itame_number">986</string>
    <string name="Used">Used</string>
    <string name="Used_number">10Gb.</string>
</resources>