<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <include layout="@layout/custom_toolbar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="52"
        android:background="@drawable/cut_card_black_right_bottom"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/title_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="100">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25"
                android:text="@string/My_Profile"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_marginStart="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="42"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="60dp">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@drawable/ic_launcher_foreground"
                        android:background="@drawable/ic_launcher_background"
                        android:contentDescription="@string/Avatar" />

                </androidx.cardview.widget.CardView>



                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/FullName"
                    android:textStyle="bold"
                    android:textSize="19sp"
                    android:textColor="@color/white"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/Rol"
                    android:textColor="@color/white"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="33"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:baselineAligned="false"
                    android:weightSum="3">

                    <LinearLayout
                        android:id="@+id/folder"
                        android:layout_width="0dp"
                        android:orientation="vertical"
                        android:layout_height="match_parent"
                        android:layout_weight="1">


                        <TextView
                            android:id="@+id/txtfolder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:textAlignment="center"
                            android:text="@string/Folder"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_marginTop="8dp"/>

                        <TextView
                            android:id="@+id/txtnumber_folder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Folder_number"
                            android:textSize="25sp"
                            android:textAlignment="center"
                            android:textColor="@color/mostasa"
                            android:textStyle="bold"
                            android:layout_marginTop="5dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llitame"
                        android:layout_width="0dp"
                        android:orientation="vertical"
                        android:layout_height="match_parent"
                        android:layout_weight="1">


                        <TextView
                            android:id="@+id/txtitame"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:textAlignment="center"
                            android:text="@string/Itame"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_marginTop="8dp"/>

                        <TextView
                            android:id="@+id/txtnumber_itame"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Itame_number"
                            android:textSize="25sp"
                            android:textAlignment="center"
                            android:textColor="@color/mostasa"
                            android:textStyle="bold"
                            android:layout_marginTop="5dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llused"
                        android:layout_width="0dp"
                        android:orientation="vertical"
                        android:layout_height="match_parent"
                        android:layout_weight="1">


                        <TextView
                            android:id="@+id/txtused"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:textAlignment="center"
                            android:text="@string/Used"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_marginTop="8dp"/>

                        <TextView
                            android:id="@+id/txtnumber_used"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Used_number"
                            android:textSize="25sp"
                            android:textAlignment="center"
                            android:textColor="@color/mostasa"
                            android:textStyle="bold"
                            android:layout_marginTop="5dp"/>

                    </LinearLayout>

                </LinearLayout>



            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/negro"
        android:orientation="vertical"
        android:layout_weight="48">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/cut_card_white_left_top">

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
